Basic HTML improvements

--- a/project/public_html/index.html
+++ b/project/public_html/index.html
@@ -11,20 +11,34 @@
   <body>
     <header>
       <section>
-        <h1>PySecCam</h1>
-        <h2>IoT is fun!</h2>
+        <div class="section__inner">
+          <h1>PySecCam</h1>
+          <h2>IoT is fun!</h2>
+        </div>
       </section>
     </header>
 
     <main>
       <section>
-        <img src="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" alt="Snapshot" title="Snapshot" width="1280" height="720" />
+        <div class="section__inner">
+          <p>
+            <img src="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" alt="Snapshot" title="Snapshot" width="1280" height="720" />
+          </p>
+
+          <ul>
+            <li><a href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" target="_blank">Open snapshot image</a></li>
+            <li><a href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/capture.jpg" target="_blank">Open capture image</a></li>
+            <li><a href="https://console.aws.amazon.com/s3/buckets/zhaw-iot1/" target="_blank">Open AWS console</a></li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer>
       <section>
-        <p>Copyright © 2018 by <a href="https://trvlr.ch/" target="_blank">trvlr</a>.<br />All rights reserved.</p>
+        <div class="section__inner">
+          <p>Copyright © 2018 by <a href="https://trvlr.ch/" target="_blank">trvlr</a>. All rights reserved.</p>
+        </div>
       </section>
     </footer>
   </body>
