--- a/project/public_html/index.html
+++ b/project/public_html/index.html
@@ -22,12 +22,13 @@
       <section>
         <div class="section__inner">
           <p>
-            <img src="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" alt="Snapshot" title="Snapshot" width="1280" height="720" />
+            <h3 id="image-title">Snapshot image</h3>
+            <img id="image" src="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" alt="Snapshot" title="Snapshot" width="1280" height="720" />
           </p>
 
           <ul>
-            <li><a href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" target="_blank">Open snapshot image</a></li>
-            <li><a href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/capture.jpg" target="_blank">Open capture image</a></li>
+            <li><a id="snapshot-link" href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" target="_blank">Open snapshot image</a></li>
+            <li><a id="capture-link" href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/capture.jpg" target="_blank">Open capture image</a></li>
             <li><a href="https://console.aws.amazon.com/s3/buckets/zhaw-iot1/" target="_blank">Open AWS console</a></li>
           </ul>
         </div>
@@ -41,5 +42,8 @@
         </div>
       </section>
     </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
