--- a/project/public_html/index.html
+++ b/project/public_html/index.html
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link type="text/css" rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:300,500" />
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,500" />
     <link rel="stylesheet" href="css/html5reset-1.6.1.css" media="all" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" media="all" />
     <link rel="stylesheet" href="css/style.css" media="all" />
     <title>PySecCam</title>
   </head>
@@ -23,7 +24,7 @@
         <div class="section__inner">
           <p>
             <h3 id="image-title">Snapshot image</h3>
-            <img id="image" src="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" alt="Snapshot" title="Snapshot" width="1280" height="720" />
+            <a id="image-link" href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" target="_blank"><img id="image" src="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" alt="Snapshot" title="Snapshot" width="1280" height="720" /></a>
           </p>
 
           <ul>
@@ -44,6 +45,7 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
