Change links list to buttons

--- a/project/public_html/index.html
+++ b/project/public_html/index.html
@@ -27,11 +27,13 @@
             <a id="image-link" href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" target="_blank"><img id="image" src="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" alt="Snapshot" title="Snapshot" width="1280" height="720" /></a>
           </p>
 
-          <ul>
-            <li><a id="snapshot-link" href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" target="_blank">Open snapshot image</a></li>
-            <li><a id="capture-link" href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/capture.jpg" target="_blank">Open capture image</a></li>
-            <li><a href="https://console.aws.amazon.com/s3/buckets/zhaw-iot1/" target="_blank">Open AWS console</a></li>
-          </ul>
+          <nav class="pager">
+            <ul>
+              <li><a id="snapshot-link" href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/snapshot.png" target="_blank">Snapshot image</a></li>
+              <li><a href="https://console.aws.amazon.com/s3/buckets/zhaw-iot1/" target="_blank">AWS console</a></li>
+              <li><a id="capture-link" href="https://s3-eu-west-1.amazonaws.com/zhaw-iot1/capture.jpg" target="_blank">Capture image</a></li>
+            </ul>
+          </nav>
         </div>
       </section>
     </main>
