--- a/project/public_html/index.html
+++ b/project/public_html/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,500" />
     <link rel="stylesheet" href="css/html5reset-1.6.1.css" media="all" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" media="all" />
